--- a/BAND-hostapd.conf
+++ b/BAND-hostapd.conf
@@ -1,7 +1,7 @@
 ## INSTALL hostapd
 ## --> deb http://http.kali.ord/kali kali-rolling main contrib non-free
 ## sudo echo "deb http://http.kali.ord/kali kali-rolling main contrib non-free" >> /etc/apt/sources.list
-## sudo apt-get install hostapd
+## sudo apt-get -y install hostapd
 
 ## TO RUN THIS CONFIG FILE:
 ## hostapd ./BAND-hostapd.conf &
