airmon-ng check kill

--- a/BAND-hostapd.conf
+++ b/BAND-hostapd.conf
@@ -2,6 +2,7 @@
 ## --> deb http://http.kali.ord/kali kali-rolling main contrib non-free
 ## sudo echo "deb http://http.kali.ord/kali kali-rolling main contrib non-free" >> /etc/apt/sources.list
 ## sudo apt-get -y install hostapd
+## airmon-ng check kill
 
 ## TO RUN THIS CONFIG FILE:
 ## hostapd ./BAND-hostapd.conf &
