--- a/BAND-hostapd.conf
+++ b/BAND-hostapd.conf
@@ -5,6 +5,7 @@
 ## airmon-ng check kill
 
 ## TO RUN THIS CONFIG FILE:
+## airmon-ng check kill
 ## hostapd ./BAND-hostapd.conf &
 
 ## AP Configuration
